assets/css/style.css
/* ... */
.glax_tm_mobile_bar_wrap .mobile_topbar_wrap .short_info_wrap ul li a .svg{
	width: 20px;
	height: 20px;
}
.glax_tm_mobile_bar_wrap .mobile_topbar_wrap .mobile_socials_wrap ul{
	margin: 0px;
	list-style-type: none;
}
.glax_tm_mobile_bar_wrap .mobile_topbar_wrap .mobile_socials_wrap ul li{
	margin: 0px 10px 0px 0px;
	float: left;
}
.glax_tm_mobile_bar_wrap .mobile_topbar_wrap .mobile_socials_wrap ul li:last-child{margin-right: 0px;}
.glax_tm_mobile_bar_wrap .mobile_topbar_wrap .mobile_socials_wrap ul li a{
	text-decoration: none;
	color: #5d5e5e;
	width: 25px;
	height: 25px;
	line-height: 25px;
	border-radius: 100%;
	border: 1px solid #5d5e5e;
	display: inline-block;
	text-align: center;
}

/*------------------------------------------------------------------*/ 
/*	04) GLAX MOBILE HEADER
/*------------------------------------------------------------------*/

.glax_tm_mobile_bar_wrap .mobile_header_wrap{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	background-color: #0f0f16;
	padding: 20px 0px;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .inner_wrap{
	display: flex;
	align-items: center;
	justify-content: space-between;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .hamburger_wrap .trigger_wrap{float: right;}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger {
  padding: 15px 15px;
  display: inline-block;
  cursor: pointer;
  transition-property: opacity, filter;
  transition-duration: 0.15s;
  transition-timing-function: linear;
  font: inherit;
  color: inherit;
  text-transform: none;
  background-color: transparent;
  border: 0;
  margin: 0;
  overflow: visible;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-box {
  width: 30px;
  height: 18px;
  display: inline-block;
  position: relative;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-inner {
  display: block;
  top: 50%;
  margin-top: -2px;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
    width: 30px;
    height: 2px;
    background-color: #333333;
    position: absolute;
    transition-property: transform;
    transition-duration: 0.15s;
    transition-timing-function: ease;
	
	-webkit-border-radius: 4px;
	   -moz-border-radius: 4px;
	        border-radius: 4px;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-inner::before,
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-inner::after {
    content: "";
    display: block;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-inner::before{top: -8px;}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-inner::after{ bottom: -10px;}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger--collapse-r .hamburger-inner {
  top: auto;
  bottom: 0;
  transition-duration: 0.13s;
  transition-delay: 0.13s;
  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger--collapse-r .hamburger-inner::after{
    top: -16px;
    transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), opacity 0.1s linear;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger--collapse-r .hamburger-inner::before{
    transition: top 0.12s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger--collapse-r.is-active .hamburger-inner{
  transform: translate3d(0, -10px, 0) rotate(45deg);
  transition-delay: 0.22s;
  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger--collapse-r.is-active .hamburger-inner::after{
    top: 0;
    opacity: 0;
    transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), opacity 0.1s 0.22s linear;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger--collapse-r.is-active .hamburger-inner::before{
    top: 0;
    transform: rotate(90deg);
    transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger{
	padding: 0px;
	height: 100%;
	display: table-cell;
	vertical-align: middle;
}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger-box{display: block;}
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger .hamburger-inner::before,
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger .hamburger-inner::after,
.glax_tm_mobile_bar_wrap .mobile_header_wrap .trigger_wrap .hamburger .hamburger-inner{
	background-color: #cccccc;
	width: 30px;
	
	-webkit-transition: all .3s ease;
	   -moz-transition: all .3s ease;
	    -ms-transition: all .3s ease;
	     -o-transition: all .3s ease;
	        transition: all .3s ease;
}
.glax_tm_mobile_bar_wrap .menu_list_wrap{
	width: 100%;
	height: auto;
	clear: both;
	float: left;
	background-color: #14141c;
	display: none;
	padding: 43px 20px 42px 20px;
}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul{
	margin: 0px;
	list-style-type: none;
}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li{margin: 0px 0px 10px 0px;}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li:last-child{margin-bottom: 0px;}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li > a{
	text-decoration: none;
    color: #ccc;
    font-size: 18px;
    line-height: 27px;
    text-transform: uppercase;
    display: block;
    position: relative; 
}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li .sub_menu{
	display: none;
	margin: 0px;
	list-style-type: none;
	padding: 19px 20px 9px 20px;
}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li .sub_menu li{margin: 0px 0px 10px 0px;}
.glax_tm_mobile_bar_wrap .menu_list_wrap > ul > li .sub_menu li:last-child{margin-bottom: 0px;}
/* ... */

